--- a/login.html
+++ b/login.html
@@ -1,1 +1,31 @@
 
+<!DOCTYPE html>
+<html dir="rtl" lang="ar">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>تسجيل الدخول</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <h2>تسجيل الدخول</h2>
+        <form action="welcome.html">
+            <div class="input-group">
+                <label>البريد الإلكتروني</label>
+                <input type="email" placeholder="name@example.com" required>
+            </div>
+            <div class="input-group">
+                <label>كلمة المرور</label>
+                <input type="password" placeholder="******" required>
+            </div>
+            
+            <button type="submit" class="btn">دخول</button>
+            
+            <div class="links">
+                ليس لديك حساب؟ <a href="signup.html">أنشئ حساباً جديداً</a>
+            </div>
+        </form>
+    </div>
+</body>
+</html>
