--- a/welcome.html
+++ b/welcome.html
@@ -1,1 +1,19 @@
 
+<!DOCTYPE html>
+<html dir="rtl" lang="ar">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>مرحباً بك</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <div class="success-icon">✔</div>
+        <h2>تم تسجيل الدخول بنجاح!</h2>
+        <p style="color: #666; margin-bottom: 20px;">أهلاً بك في لوحة التحكم الخاصة بك.</p>
+        
+        <a href="login.html" class="btn" style="display: block; text-decoration: none;">تسجيل الخروج</a>
+    </div>
+</body>
+</html>
